src/objects/IDP_Connection_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Identity provider connection settings.</description>
    <fields>
        <fullName>Access_Token__c</fullName>
        <description>IDP Access Token</description>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Social_Posting__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable Social Posting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDP_Provider_Name__c</fullName>
        <description>Identity Provider Name</description>
        <label>IDP Provider Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Domain__c</fullName>
        <label>My Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_ID__c</fullName>
        <label>Permission Set ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_ID__c</fullName>
        <label>Photo ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Secret__c</fullName>
        <description>IDP Token Secret</description>
        <label>Token Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IDP Connection Settings</label>
</CustomObject>